--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f0f0f0;
+    background-color: black;
 }
 header {
     background-color: #333;
@@ -11,37 +11,51 @@ header {
     text-align: center;
 }
 .container {
+  background-color: black;
     max-width: 800px;
     margin: 20px auto;
     padding: 0 20px;
+    color: white
+  
 }
 .main-content {
     background-color: #fff;
     padding: 20px;
     border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
 }
 .navbar {
-    background-color: #333;
-    overflow: hidden;
-  }
-  
+  background-color: black;
+  overflow: hidden;
+  text-align: center;
+}
+
+.navbar a {
+  display: inline-block;
+  color: white;
+  text-decoration: none;
+  padding: 14px 20px;
+  transition: background-color 0.3s;
+}
+
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+@media (max-width: 600px) {
   .navbar a {
-    float: left;
-    display: block;
+      display: block;
+  }
+}
+
+  .slipknot-imagem { 
+    width: 840px;
+    display: inline-block;
+    position: relative;
+    left: -20px;
+  }
+
+  .texto-do-slipknot { 
     color: white;
-    text-align: center;
-    padding: 14px 20px;
-    text-decoration: none;
-  }
-  
-  .navbar a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  .slipknot { 
-    width: 10px;
-    height: auto; 
-
-
   }
