--- a/style.css
+++ b/style.css
@@ -2,16 +2,16 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: black;
+    background-color: rgb(2, 2, 2);
 }
 header {
-    background-color: #333;
-    color: #fff;
+    background-color: #000000;
+    color: #ffffff;
     padding: 20px;
     text-align: center;
 }
 .container {
-  background-color: black;
+  background-color: rgb(0, 0, 0);
     max-width: 800px;
     margin: 20px auto;
     padding: 0 20px;
@@ -22,7 +22,7 @@ header {
     background-color: #fff;
     padding: 20px;
     border-radius: 5px;
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+    box-shadow: 0 0 10px rgb(255, 255, 255);
 }
 .navbar {
   background-color: black;
@@ -41,12 +41,6 @@ header {
 .navbar a:hover {
   background-color: #ddd;
   color: black;
-}
-
-@media (max-width: 600px) {
-  .navbar a {
-      display: block;
-  }
 }
 
   .slipknot-imagem { 
