--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     background-color: rgb(2, 2, 2);
 }
 header {
-    background-color: #000000;
+    background-color: gi#000000;
     color: #ffffff;
     padding: 20px;
     text-align: center;
@@ -53,3 +53,10 @@ header {
   .texto-do-slipknot { 
     color: white;
   }
+.discografia {
+  background-color: rgb(0, 0, 0);
+  max-width: 800px;
+  margin: 20px auto;
+  padding: 0 20px;
+  color: white
+}
