--- a/style.css
+++ b/style.css
@@ -63,5 +63,36 @@ header {
 .corey {
   width: 800px;
   height: 700px;
-
+}
+.jim{
+  width: 800px;
+  height: 700px;
+}
+.mick { 
+  width: 800px;
+  height: 700px;
+}
+.sid {
+  width: 800px;
+  height: 700px;
+}
+.clown {
+  width: 800px;
+  height: 700px;
+}
+.craig {
+  width: 800px;
+  height: 700px;
+}
+.jay {
+  width: 800px;
+  height: 700px;
+}
+.alessandro { 
+  width: 800px;
+  height: 700px;
+}
+.jay-2 { 
+  width: 800px;
+  height: 700px;
 }
