--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body {
   margin: 0;
   padding: 0;
   background-color: rgb(2, 2, 2);
+  text-align: center;
+
 }
 
 header {
@@ -18,6 +20,8 @@ header {
   margin: 20px auto;
   padding: 0 20px;
   color: white;
+  
+
 }
 
 .main-content {
@@ -86,6 +90,7 @@ header {
   height: auto;
   margin: 20px auto;
   display: block;
+  
 }
 
 .mick {
@@ -148,5 +153,11 @@ border-radius: 50%;
 text-align: center;
 height: 60px;
 font-size: small;
+}
+.curiosidades-slipknot { 
+text-align: center;
+}
+.link-insta {
+  color: #fff;
 }
 
