--- a/style.css
+++ b/style.css
@@ -262,6 +262,22 @@ text-align: center;
   margin-right: auto;
   display: block;
 }
+.dead-memories {
+  position: relative;
+  padding-bottom: 56.25%; /* Proporção de 16:9 (9 dividido por 16) */
+  height: 0;
+  overflow: hidden;
+}
+
+.dead-memories iframe {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  overflow: hidden;
+}
+
 
 
   
