--- a/style.css
+++ b/style.css
@@ -153,6 +153,7 @@ border-radius: 50%;
 text-align: center;
 height: 60px;
 font-size: small;
+margin-top: 50px;
 }
 .curiosidades-slipknot { 
 text-align: center;
@@ -276,11 +277,13 @@ text-align: center;
   left: 0;
   top: 0;
   overflow: hidden;
+  text-align: center;
 }
 label {
   display: block;
   font-weight: bold;
   margin-bottom: 5px;
+  text-align: center;
 }
 
 input[type="text"],
@@ -292,6 +295,7 @@ textarea {
   box-sizing: border-box;
   border: 1px solid #ccc;
   border-radius: 3px;
+  text-align: center;
 }
 
 textarea {
@@ -303,6 +307,7 @@ input[type="submit"] {
   border: none;
   padding: 10px 20px;
   border-radius: 3px;
+  text-align: center;
 }
 
 
